[DCGEO-165] PR Fixes